# hdr-viewer

./: .gitignore  README.md  package.json  release.config.js
.github/workflows/: main.yml
cpp/: CMakeLists.txt
cpp/bindings/: pybind.cpp
cpp/include/: image_io.h  image_processing.h  timer.h
cpp/kernels/: apply_exposure_gamma.cl  apply_gamma.cl  apply_gamma_exposure.cl  exposure_correction.cl  gamma_correction.cl
cpp/src/: image_io.cpp  image_processing.cpp  main.cpp  timer.cpp
py_app/: __init__.py  run.py
py_app/extensions/: hdr_viewer_cpp.exp  hdr_viewer_cpp.lib
py_app/extensions/py311-windows/: image_processing_lib.lib
py_app/module/: __init__.py  viewer.py
